--- a/talks.html
+++ b/talks.html
@@ -120,11 +120,33 @@
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
+    <a href="https://www.newton.ac.uk/event/emgw02/"></a>Seminar,
+    February  2024, University of Swansea. 
+   <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Geometry Seminar, University of Edinburgh.
+    31 January 2024,
+    <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
     <a href="https://www.newton.ac.uk/event/emgw02/">Applied and computational algebraic geometry</a>,
     22 &ndash; 26 January 2024, Isaac Newton Institute. 
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
@@ -134,25 +156,19 @@
     <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Colloquium, UT Dallas.
-    Deceember 1 2023,
+    December 1 2023,
     <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
- <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club &amp; SIAM Student Organization, UT Dallas,
     1 December 2023.   <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
