--- a/teaching/24.1/weeks/W01.html
+++ b/teaching/24.1/weeks/W01.html
@@ -5,7 +5,7 @@
   <H1><a href="../629.html">Math 629:  History of Mathematics</a><br>
   Frank Sottile
   </H1>
-  <font color=red>This is not completed.  The assignment is innacurate.</font>
+ 
 <!---------------------------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
@@ -17,9 +17,6 @@
 <font color=maroon><h3>Week 1: 16 January 2024.  Number systems: Babylonian and Mayan Mathematics.</h3></font>
 <ul>
 
-  <li>
-    <b>Set up teams of three</b>
-  </li> 
   <li><font color=maroon><B>Opening Remarks:</b></font><br>
    Many believe that mathematics started with numbers; counting, measuring, planning, settling accounts, etc.
    Without entering that debate (despite teaching this course, I am not an historian, but rather a practicing mathematician),
@@ -73,7 +70,10 @@
     <li>
     Read the St. Andrew's pages on <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/category-babylonians/">Babylonian Mathematics</a>.
     </li>
-    <li>Finally, read the St. Andrew's pages on <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/Mayan_mathematics/">Mayan Mathematics</a></li>
+    <li>Read the St. Andrew's pages on <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/Mayan_mathematics/">Mayan Mathematics</a></li>
+    <li>Finally, please watch the first 35 minutes of <a href="https://www.youtube.com/watch?v=2WcbPcGrQZU">The History of
+	 Mathematics</a> (if you haven't yet done so),
+	 a film with British Mathematician Marcus du Sautoy.    This segment covers Egyptian and Babylonian Mathematics.</li>
    </ul>
   </li>
 <br>
@@ -85,7 +85,7 @@
     week's grade will be minimal (between 5 and 10%).<br> 
     <font color=red>It is OK to discuss the homework among yourselves.  We all have something to learn from each other.</font><br>
     I ask you to type what you can, particularly longer written exercises, and that you be as neat as possible.<br>
-    Here is a <a href="../HW/HW1.pdf">.pdf</a> and a  <a href="../HW/HW1.tex">LaTeX source</a> of the assignment.<br>
+    Here is a <a href="../HW/HW01.pdf">.pdf</a> and a  <a href="../HW/HW01.tex">LaTeX source</a> of the assignment.<br>
   <b><font color=maroon>To hand in:</font></b> <font color=red>We are using Gradescope for homework submission</font>.<br>
 
   <font color=red>Due Monday 24 January 2022. </font>
@@ -115,12 +115,30 @@
     <!-- [Maple Code] Digits:=100: a:=1: n:=5: for i from 1 to 10 do a:=(a+n/a)/2: lprint(evalf(a)): end do: -->
     </li>
 
-    <li>I'd like us all to practice some calculations using the sexagesimal system of the Mesopotamians.
+   <li> Explain how the Babylonians used tables of squares (<i>n</i><sup>2</sup>) to facilitate multiplication of whole numbers.
+         Compare this to the method we commonly use for calculations by hand.
+         Which do you think makes more sense for sexagesimal calculations?
+         Why?<br>
+         <a href="../../18.1/Babylonian_Squares.html">Table of Babylonian squares</a>.
+    </li>
+    <li> While Babylonian mathematics is fascinating&mdash;my favorite story is how they solved quadratic equations, so that the familiar quadratic formula is
+        just a reworking of their method&mdash;I have already assigned enough to keep us busy.
+  </ol>
+ </li>
+</ul>
+
+<ul>
+  <li> <b>Group problem</b>
+      This is the first of the problems I am assigning to be not handed in, but rather worked on in a group (which we need to set up).
+      The .pdf of this assignment is not yet available; it will have the same questions below, but include some more resources and examples
+      for you.
+    <br>
+     I'd like us all to practice some calculations using the sexagesimal system of the Mesopotamians.
         For this, let us use the notation that `;' represents the `sexagesimal point' and `,' is the delimiter between `places'.
         Thus `2,22' is 2*60+22=142, one-hundred and forty two, while `1;45' is 1+45/60=1.75.
         Do these using base 60 and show or explain your work.
         The purpose of this is to appreciate what it is like to compute in base 60.
-        <font color=red>To that end, do not simply convert to base ten, do the computations, and convert back.
+        <font color=red>Do not simply convert to base ten, do the computations, and convert back.
         Do them purely in base 60, employing the usual algorithms you know.</font>
        <ol>
         <li> Warm-up: Express the (decimal) numbers in sexagesimal:  45 &nbsp;  150 &nbsp; 3253 &nbsp;  17589 &nbsp; 100,000. </li>
@@ -146,18 +164,9 @@
 	      I found this interesting.
 	</li>
        </ol>
-    </li>
-    <li> Explain how the Babylonians used tables of squares (<i>n</i><sup>2</sup>) to facilitate multiplication of whole numbers.
-         Compare this to the method we commonly use for calculations by hand.
-         Which do you think makes more sense for sexagesimal calculations?
-         Why?<br>
-         <a href="../../18.1/Babylonian_Squares.html">Table of Babylonian squares</a>.
-    </li>
-    <li> While Babylonian mathematics is fascinating&mdash;my favorite story is how they solved quadratic equations, so that the familiar quadratic formula is
-        just a reworking of their method&mdash;I have already assigned enough to keep us busy.
-  </ol>
- </li>
-</ul>
+     </li>
+   </ul>
+
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------------------------------->
@@ -166,7 +175,7 @@
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts startLast modified: Thu Jan  9 13:35:43 CET 2020  --><!-- hhmts end -->
-<p>Last modified: Sun Jan 14 21:14:51 GMT 2024 by sottile</p>
+<p>Last modified: Wed Jan 17 22:17:08 GMT 2024 by sottile</p>
 
 <!---------------------------------------------------------------------------------------------------->
 
