--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -7,7 +7,7 @@
  </H1>
 
  <hr><font color=red size=+1>Under Construction!  The required disclaimers have not been added, but
-   <a href="weeks/W00.html">Week 0</a> is OK.</font>
+   <a href="weeks/W00.html">Week 0</a> and <a href="weeks/W01.html">Week 1</a> are OK.</font>
  
 <!---------------------------------------------------------------------------------> 
 <HR>
@@ -42,8 +42,8 @@ Information for
   <a href="weeks/W05.html">Week 5</a>  &nbsp; 
   <a href="weeks/W04.html">Week 4</a>  &nbsp;
   <a href="weeks/W03.html">Week 3</a>  &nbsp;
-  <a href="weeks/W02.html">Week 2</a>  &nbsp;
-  <a href="weeks/W01.html">Week 1</a>  &nbsp;   -->   
+  <a href="weeks/W02.html">Week 2</a>  &nbsp;   -->   
+  <a href="weeks/W01.html">Week 1</a>  &nbsp;
 <a href="weeks/W00.html">Week 0</a>.<br>
 
 
