First Group work

--- a/talks.html
+++ b/talks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+ps<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
 <title>Frank Sottile's Talks</title>
 <link rel="shortcut icon" href="images/sottile.ico"> 
@@ -135,13 +135,19 @@
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  University of Edinburgh.
+    30 January 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
     <a href="https://www.newton.ac.uk/event/emgw02/">Applied and computational algebraic geometry</a>,
     22 &ndash; 26 January 2024, Isaac Newton Institute. 
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
 </ul>
 <hr>
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
