--- a/teaching/24.1/weeks/W01.html
+++ b/teaching/24.1/weeks/W01.html
@@ -131,7 +131,8 @@
   <li> <b>Group problem</b>
       This is the first of the problems I am assigning to be not handed in, but rather worked on in a group (which we need to set up).
       The .pdf of this assignment is not yet available; it will have the same questions below, but include some more resources and examples
-      for you.
+    for you.
+    <a href="../HW/Group01.pdf">.pdf</a> and a  <a href="../HW/Group01.tex">LaTeX source</a> of this.
     <br>
      I'd like us all to practice some calculations using the sexagesimal system of the Mesopotamians.
         For this, let us use the notation that `;' represents the `sexagesimal point' and `,' is the delimiter between `places'.
@@ -160,7 +161,7 @@
         it was inferior.  You can include fractions for this second question. 
    </li>
 	<li> Challenge (only if you have stamina and like this stuff; this is not required):  Try to verify that (1;24,51,10)^2 is pretty
-              close to 2,            as recorded on YBC 7289. What is the next term in sexagesimal? 
+              close to 2, as recorded on YBC 7289. What is the next term in sexagesimal? 
 	      I found this interesting.
 	</li>
        </ol>
@@ -175,7 +176,7 @@
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts startLast modified: Thu Jan  9 13:35:43 CET 2020  --><!-- hhmts end -->
-<p>Last modified: Wed Jan 17 22:17:08 GMT 2024 by sottile</p>
+<p>Last modified: Fri Jan 19 23:14:34 GMT 2024 by sottile</p>
 
 <!---------------------------------------------------------------------------------------------------->
 
