--- a/conferences.html
+++ b/conferences.html
@@ -116,7 +116,10 @@
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
  <li>
-   Conference  June 3&ndash;7 2024, "Computational and Applied Enumerative Geometry", Fields Institute, Toronto Ontario.
+   Conference on
+   <a href="http://www.fields.utoronto.ca/activities/23-24/enumerative-geometry">Computational and Applied  Enumerative Geometry</a>, 
+   June 3&ndash;7 2024, Fields Institute, Toronto Ontario.
+   <a href="conferences/Frank_24.pdf">poster</a>.
  </li>
  <!---------------------------------------------------------------------------->
  <!--------------------------------------------------------->
@@ -124,6 +127,13 @@
    <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    5  &ndash; 7 April, 2024.
+ </li>
+ <!--------------------------------------------------------->
+ <!--------------------------------------------------------->
+ <li>
+   <a href=" https://www.math.tamu.edu/conferences/combinatexas/">CombinaTexas</a>,
+   Texas A&amp;M University,
+   23  &ndash; 24 March, 2024.
  </li>
  <!--------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
