--- a/talks.html
+++ b/talks.html
@@ -117,11 +117,26 @@ ps<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Invited talks, <a href="https://sites.google.com/view/maagoldenmeetings/">MAA Golden Section meeting</a>, University of
+    California, Santa Cruz, 24 February 2024.
+    <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  Swansea University.
+    12 February 2024.  <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
-    <a href="https://www.newton.ac.uk/event/emgw02/"></a>Seminar,
-    February  2024, University of Swansea. 
+    <a href="https://sites.google.com/view/appliedalgebraandgeometry/home/18th-meeting-swansea">18th UK Applied Algebra and Geometry network
+    meeting</a>, 
+    12 February  2024, Swansea  University. 
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
