--- a/teaching/24.1/weeks/W02.html
+++ b/teaching/24.1/weeks/W02.html
@@ -10,23 +10,22 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-<a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+<a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 &nbsp; &nbsp;
 <!--------------------------------------------------------->
 <HR>
 
 
-<font color=maroon><h3>Week 2: 24 January 2022. </h3></font>
+<font color=maroon><h3>Week 2: 24 January 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
-    &nbsp; &nbsp; &nbsp; <font color=AA00FF>This would be a good time to decide on the book you plan to review for
-      your <a href="../Book_Review.html">Book Review</a>.</font>  <br>
    A prominent 20th century British mathematician described the Greeks as `fellows of another college'.
    Their accomplishments and methods remain valid and inspiring to many, even after over 2 millennia.
    This illustrates a major feature of mathematics, which sets it apart from other human endeavors:
    Mathematics is additive.
    While topics may go in or out of style and what is important may change over the generations, the discoveries of the past remain valid
-   and they form part of the foundation of current work.<br>
+   and they form part of the foundation of current work.
+   It is common to cite work published in the 19th century in current research. <br>
 
    &nbsp; &nbsp; I believe that Stillwell starts with the Greeks because of their modern outlook (hence the above quote), they were the
    first to use the deductive method and require that mathematical truths be proven.
@@ -51,10 +50,13 @@
   </li>
 
   <li><font color=maroon><B>Reading:</b></font>
-   <ul>
+    <ul>
+      <li>Please watch  <a href="https://www.youtube.com/watch?v=2WcbPcGrQZU">The History of Mathematics</a>, from minute 35 to
+	minute 53, on Greek mathematics. 
      <li>
      Chapters 1 and 2 of Stillwell.<br>
-     In your readings of Stillwell, I'd like it if you could include reading the  exercises, as well as the text. <br>
+     In your readings of Stillwell, I'd like it if you could include reading the exercises, as well as the text.
+     In this text, like many, some of the material is developed in the exercises.<br>
       &nbsp; &nbsp;
      The historical notes at the end of the chapter provide some interesting color about the lives of the protagonists; they are likewise
      worth reading. 
@@ -64,23 +66,23 @@
        While we appear to have a great understanding of Greek mathematicians and their mathematics, this knowledge has not come to us as
        easily as, say our knowledge of 19th century physicists.
        To appreciate this, please read the St. Andrews page 
-       <a href="http://www-history.mcs.st-and.ac.uk/HistTopics/Greek_sources_1.html">How do we know about Greek mathematics?</a>.
+       <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/Greek_sources_1/">How do we know about Greek mathematics?</a>.
     </li>
     <li>
-      In Plato's dialog <a href="http://classics.mit.edu/Plato/meno.html">Meno</a> type "inquisitive" into your web browser's text search window to get
-          quickly to the scene with the slave boy.  Read that part of the dialog.
+      In Plato's dialog <a href="http://classics.mit.edu/Plato/meno.html">Meno</a> type "inquisitive" into your web browser's text search
+          window to get quickly to the scene with the slave boy.  Read that part of the dialog.
     </li>
-    <li>Try your hand at <a href="https://www.euclidea.xyz/en/">Euclidea</a>, adn on-liine straightedge and compass constructor.</li>
+    <li>Try your hand at <a href="https://www.euclidea.xyz/en/">Euclidea</a>, an on-line straightedge and compass constructor.</li>
     </ul>
   </li>
 
- <li><font color=maroon><b>Assignment:</b>  Due Monday, January 31, 2022.</font> (HW 2 and Concept Quiz 2) &nbsp;<br>
+ <li><font color=maroon><b>Assignment:</b>  Due Monday, January 29, 2024.</font> (HW 2 and Concept Quiz 2) &nbsp;<br>
     The quiz (on Gradescope) is four exceptionally short questions with even shorter answers that you need to take after you have
     completed the reading.<br>
   <font color=red>It is OK to discuss the homework among yourselves. </font><br>
   &nbsp; &nbsp; &nbsp; 
   <font color=blue>Some of these problems will require you to find other material than just what is in the readings.</font><br>
-   Here is a <a href="../HW/HW2.pdf">.pdf</a> and a  <a href="../HW/HW2.tex">LaTeX source</a> of the assignment.<br>
+   Here is a <a href="../HW/HW02.pdf">.pdf</a> and a  <a href="../HW/HW02.tex">LaTeX source</a> of the assignment.<br>
   <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
   <ol>
 
@@ -143,7 +145,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sat Jan 18 17:35:50 CET 2022 --><!-- hhmts end -->
-<p>Last modified: Thu Jan 27 18:55:47 CST 2022 by sottile</p>
+<p>Last modified: Wed Jan 24 08:20:59 GMT 2024 by sottile</p>
 
 
 </body> </html>
