--- a/talks.html
+++ b/talks.html
@@ -1,4 +1,4 @@
-ps<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
 <title>Frank Sottile's Talks</title>
 <link rel="shortcut icon" href="images/sottile.ico"> 
