--- a/teaching/24.1/weeks/W02.html
+++ b/teaching/24.1/weeks/W02.html
@@ -84,6 +84,8 @@
   <font color=blue>Some of these problems will require you to find other material than just what is in the readings.</font><br>
    Here is a <a href="../HW/HW02.pdf">.pdf</a> and a  <a href="../HW/HW02.tex">LaTeX source</a> of the assignment.<br>
   <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
+  While the point totals on this homework are different than those on last homework (this is to make it easier on the grader),
+  each homework assignment will have the same weight.
   <ol>
 
     <!-------------------------------->
@@ -121,9 +123,9 @@
       Do Exercises 2.4.1 and 2.4.2 from Stillwell.
     </li>
     <!-------------------------------->
-    <li>
+<!--    <li>
       Do Exercises 2.5.1 and 2.5.2 from Stillwell.
-    </li>
+    </li>-->
 
   </ol>
  </li>
@@ -145,7 +147,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sat Jan 18 17:35:50 CET 2022 --><!-- hhmts end -->
-<p>Last modified: Wed Jan 24 08:20:59 GMT 2024 by sottile</p>
+<p>Last modified: Thu Jan 25 09:02:06 GMT 2024 by sottile</p>
 
 
 </body> </html>
