fixed typos in W03

--- a/conferences.html
+++ b/conferences.html
@@ -126,7 +126,8 @@
  <li>
    <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
-   5  &ndash; 7 April, 2024.
+   5  &ndash; 7 April, 2024.<br>
+   Supported by NSF grant DMS-2349244.
  </li>
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
