--- a/teaching.html
+++ b/teaching.html
@@ -133,21 +133,18 @@
 <!--    Before teaching any course, especially one you have taught before,  ---->
 <!--    re-read your evaluations !                                          ---->
 <!------------------------------------------------------------------------------>
-   <b><FONT SIZE=+1 color=brown>Fall 2023</font></b>
+ <!---------------------------------------------------------------------------------------------------->
+   <b><FONT SIZE=+1 color=brown>Spring  2024</font></b>
    <table>
      <!-------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 221H</font> Sect. 201</td>
-      <td><a href="teaching/23.2/221H.html">Honors Multivariable Calculus</a> &nbsp; </td>
-      <td align=right>MWF 9:10&ndash;10:00</td><td>Blocker 121</td>
+    <tr><td><font color=brown>MATH 629</font></td>
+      <td><a href="teaching/24.1/629.html">History of Mathematics</a> &nbsp; </td>
+      <td align=leftt>This is a distance course.</td>
      </tr>
-     <!-------------------------------------------------------------------------->
-  <tr><td><font color=brown>MATH 653</font> <!--Sect. 600--></td>
-       <td><a href="teaching/23.2/653.html">Algebra I</a>.</td>
-       <td>MWF 11:30&ndash;12:20</td><td>Blocker 121</td>
-     </tr>
-   </table>
-<!---------------------------------------------------------------------------->
-<TABLE>
+  </table>
+ <!------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------->
+<!--<TABLE>
  <TR> 
   <TD>
    &nbsp;<FONT COLOR=AA00FF><EM>Office Hours</EM>:&nbsp; </FONT>
@@ -172,7 +169,7 @@
    <IMG SRC="images/dot.gif"> By appointment
   </TD>
  </TR> 
-</TABLE>
+</TABLE>-->
 <!-------------------------------------------------->
 </td></tr>
 <!---------------------------------------------------------------------------->
@@ -197,15 +194,15 @@
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
-    A.J. Perea,  TAMU Master's Student.
+    A.J. Perea,  TAMU Master's Student.     Passed his Master's exam October 2023.
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
-    Osman Quinteros,  TAMU Master's Student.   Passed his Master's exam OCtober 2023
+    Osman Quinteros,  TAMU Master's Student.   Passed his Master's exam October 2023.
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
-    Jonah Robinson,  TAMU Master's Student.
+    Jonah Robinson,  TAMU Master's Student.  
  </dd>
  <!---------------------------------------------------------------------------------------------------->
  <!------- <dd>
