--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -200,7 +200,7 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="Second_paper.html"></a>Short Paper  &nbsp;   <font color=**0000>Wednesday February 21</font>
+      <a href="Second_paper.html"></a>Short Paper  &nbsp; Due date TBD (likely early March) <!-- <font color=**0000>Wednesday February 21</font>-->
       &nbsp; &nbsp; &nbsp;
     </td> <td> 100 </td>
   </tr>
@@ -273,7 +273,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Jan 27 11:18:34 GMT 2024 by sottile</p>
+<p>Last modified: Mon Jan 29 21:55:16 GMT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
