--- a/teaching/24.1/weeks/W03.html
+++ b/teaching/24.1/weeks/W03.html
@@ -90,7 +90,10 @@
      </li>
   </ol>
    <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
-  <ol>
+   <ol>
+     <li> Stillwell gives Euclid&apos;s elegant proof that there are infinitely many prime numbers, one of the great proofs in mathematics.
+  Find and describe/explain a <i>different</i> proof that there are infinitely many prime numbers.
+
    <li>
      Continued fractions are somewhat of a lost art.
      It is known, for example, that the truncations of a continued fraction for a real number &alpha; are the best rational approximations
@@ -98,15 +101,17 @@
      Do all four exercises in Section 3.4 of Stillwell (3.4.1, 3.4.2, 3.4.3, and 3.4.4).  I also give you one computational question about a
      particular comtinued fraction on the homework.
     </li>
+    <li> Please compute the value of the infinite continued fraction with only 1&apos;s in it (see the .pdf for the precise statement).
+    </li>
     <li>
-       Consider Archimedes' quote from <i>The Method</i>: "It is of course easier to supply the proof when we have previously acquired some
+       Consider Archimedes&apos; quote from <i>The Method</i>: "It is of course easier to supply the proof when we have previously acquired some
        knowledge of the questions by the method, than it is to find it without any previous knowledge."
        What was "the method" he is referring to?
        What does his quote say about the role of experimentation or studying examples in Mathematics?
     </li>
     <li>
-      Archimedes' use of exhaustion to determine areas predated the Calculus by over 1800 years.
-      Try your hand at this method by doing the exercises in Stillwell's Section 4.4 (4.4.1, 4.4.2, and 4.4.3) to prove the
+      Archimedes&apos; use of exhaustion to determine areas predated the Calculus by over 1800 years.
+      Try your hand at this method by doing the exercises in Stillwell&apos;s Section 4.4 (4.4.1, 4.4.2, and 4.4.3) to prove the
       formula for the logarithm of product <i>of rational numbers</i>.
     Make sure to use exhaustion and not calculus tricks.
     Why did I restrict to your showing the formula for rational numbers?
@@ -118,7 +123,7 @@
     In this case, you use rectangles (Riemann sums) to get the lower and upper approximations.<br>
 
     Now here is where the logic of the method of exhaustion comes in.
-    You show that for any number <i>L</i> less than <i>A</i>, there is a lower approximation whose rectangles' areas add up to a number
+    You show that for any number <i>L</i> less than <i>A</i>, there is a lower approximation whose rectangles&apos; areas add up to a number
     exceeding 
     <i>L</i>, and the same, <i>mutatis mutandis</i>, for any number <i>G</i> greater than <i>A</i>.
     This shows that the area of <i>R</i> is <i>A</i>, and it is not by an infinitary process.<br>
@@ -129,7 +134,7 @@
     
     Contrast this to the Calculus, where you have Riemann sums that are not necessarily lower or upper approximations to the
     region <i>R</i>, but we have that the values of the Riemann sums converge to some number.
-    In (this modern vierw of The Calculus), we do not need to know <i>A</i>, we find <i>A</i> in taking the integral, using Newton's
+    In (this modern vierw of The Calculus), we do not need to know <i>A</i>, we find <i>A</i> in taking the integral, using Newton&apos;s
     Fundamental Theorem of Calculus.<br>
 
     What makes The Calculus better&mdash;and this is what I teach, particularly in Calculus 3&mdash;is that by approximating some quantity
@@ -206,7 +211,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Wed Feb  5 07:51:40 CET 2020 --> <!-- hhmts end -->
-<p>Last modified: Sat Jan 27 11:03:45 GMT 2024 by sottile</p>
+<p>Last modified: Tue Jan 30 21:05:41 GMT 2024 by sottile</p>
 
 </body> </html>
 
